fix(dark-mode): make dark mode work well with snow theme
Dark mode conflicts with the "snow" login page theme in some places.
This fixes that.

--- a/intranet/static/css/dark/login.scss
+++ b/intranet/static/css/dark/login.scss
@@ -46,3 +46,31 @@ body.login-page .login input[type="submit"] {
     color: rgba(0, 140, 220, 0.8);
 }
 
+body.login-page.has-snow {
+    .center {
+        background: rgba(100, 100, 100, 0.8);
+    }
+
+    @media (max-width: 500px), (max-height: 630px) {
+        .center {
+            background: none;
+        }
+    }
+
+    .chevron i {
+        color: #808080;
+    }
+
+    .git-version {
+        color: rgba(255, 255, 255, 0.5);
+
+        i, #revision {
+            color: white;
+        }
+    }
+
+    .footer {
+        background: rgba(13, 13, 13, 0.7);
+    }
+}
+
